[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Save_Interface/Save3.gd" type="Script" id=1]
[ext_resource path="res://myPanel.gd" type="Script" id=2]

[node name="Control" type="Control"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 1026.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect" ]
dropdown_path = NodePath("MyDialog/OptionButton")

[node name="MyDialog" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 234.0
margin_top = 216.0
margin_right = 809.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="topPanel" type="Panel" parent="MyDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -19.0
margin_right = 575.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MyDialog" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = -16.0
margin_right = 346.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Save Level"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="MyDialog" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 37.0
margin_top = 5.0
margin_right = 117.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Level Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="MyDialog" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 54.0
margin_right = 270.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Select Where To Put Level In Playiist:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CancelButton" type="Button" parent="MyDialog" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 179.0
margin_right = 555.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1

[node name="AddLevels" type="Button" parent="MyDialog" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 143.0
margin_right = 555.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Playlist has to be full for you to add more levels
"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add More Levels to Playlist"
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="LineEdit" type="LineEdit" parent="MyDialog" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 23.0
margin_right = 555.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
max_length = 100
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Enter Text Here"
placeholder_alpha = 0.5
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="SaveButton" type="Button" parent="MyDialog" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 112.0
margin_right = 554.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save Level"
flat = false
align = 1

[node name="OptionButton" type="OptionButton" parent="MyDialog" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 76.0
margin_right = 556.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 1"
flat = false
align = 0
items = [  ]
selected = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 265.0
margin_right = 629.0
margin_bottom = 341.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Please Confirm..."
resizable = false
dialog_text = "              Level Already Exists
			Replace Current Level As New Level?"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="AcceptDialog" type="AcceptDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 274.0
margin_right = 517.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_text = "Need to Name Level"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="AcceptDialog2" type="AcceptDialog" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 274.0
margin_right = 517.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_text = "Need to make all your levels"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[connection signal="pressed" from="MyDialog/CancelButton" to="." method="_on_CancelButton_pressed"]

[connection signal="pressed" from="MyDialog/AddLevels" to="." method="_on_AddLevels_pressed"]

[connection signal="pressed" from="MyDialog/SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]


